data/derived/comb/progs/unify/prog8836.ml.out
Characters 133-137:
  let seen' = if (List.mem(h, seen) = true)
                                      ^^^^
Error: This expression has type bool but an expression was expected of type
         ('a * 'b) list -> bool
